# plot_agent

./: .env.template  .gitignore  README.md  agents.py  cdk_setup.sh  create_db.py  main.py  pyproject.toml  tools.py  ui.py  ui_hitl.py  workflow.py  workflow_hitl.py
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: plot_summarizer.baml  sql.baml
deployment/: Dockerfile  cdk_destroy.sh  cdk_diff.sh  deploy_cdk.sh  docker-compose.yml  logs.sh  requirements.txt  start_service.sh  status.sh  stop_service.sh
deployment/cdk/: app.py  cdk.json
scripts/: create_db.py  main.py
src/agents/: __init__.py  agents.py
src/agents/tests/: agents.py
src/tools/: __init__.py  tools.py
src/workflow/: __init__.py  base.py  hitl.py
tests/data/: data_12345.pkl
ui/: app.py  app_hitl.py
